API Update
Can get * from table Game
